--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,16 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 
-.nav_logo{
-    margin-right: 20px;
-}
 
 #footer_text:hover{
 color: rgb(0, 221, 255) !important;
+}
+
+.nav_logo{
+    width: 50px !important;
+    margin-right: 1rem;
+}
+
+.navbar{
+    height: 130px;
 }
