--- a/src/index.css
+++ b/src/index.css
@@ -1,195 +1,7 @@
-.main {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+*{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style-type: none;
+  scroll-behavior: smooth;
 }
-#text{
-    color: rgb(0, 0, 0) !important;
-}
-
-#core {
-  margin-top: 10px;
-  margin-left: 4rem;
-  padding-right: 15px;
-  padding-left: 20px;
-}
-
-.profile-card {
-  position: relative;
-  width: 220px;
-  height: 220px;
-  background: #ffffff;
-  padding: 30px;
-  border-radius: 50%;
-  box-shadow: 0 0 22px rgba(212, 212, 212, 0.4);
-  transition: 0.6s;
-  margin: 0 25px;
-}
-
-.underline{
-  color:  rgb(255, 217, 0);
-  text-decoration: underline  rgb(255, 217, 0);  
-}
-.profile-card:hover {
-  border-radius: 10px;
-  height: 260px;
-  -webkit-box-shadow: 9px 10px 17px 8px rgba(0, 0, 0, 0.56);
-  -moz-box-shadow: 9px 10px 17px 8px rgba(0, 0, 0, 0.56);
-  box-shadow: 9px 10px 17px 8px rgba(0, 0, 0, 0.56);
-}
-
-.profile-card .img {
-  position: relative;
-  width: 100%;
-  height: 100%;
-
-  transition: 0.6s;
-  z-index: 99;
-}
-
-.profile-card:hover .img {
-  transform: translateY(-60px);
-}
-
-.img img {
-  width: 100%;
-  border-radius: 100px;
-  box-shadow: 0 0 22px #3336;
-  transition: 0.6s;
-}
-
-.profile-card:hover img {
-  border-radius: 10px;
-}
-
-.caption {
-  text-align: center;
-  transform: translateY(-80px);
-  opacity: 0;
-  transition: 0.6s;
-}
-
-.profile-card:hover .caption {
-  opacity: 1;
-}
-.caption h3 {
-  font-size: 21px;
-}
-
-.caption p {
-  font-size: 16px;
-  margin: 2px 0 9px 0;
-}
-
-.caption .social-links a {
-  color: #515151;
-  margin-right: 8px;
-  font-size: 21px;
-  transition: 0.6s;
-}
-
-.social-links a{
-    padding-bottom: 10rem !important;
-    margin-top: 10rem;
-}
-
-.social-links a:hover {
-  color: #000000;
-}
-
-
-@media (max-width: 768px) {
-    .profile-card {
-      margin-top: 3rem !important;
-    }
-    
-    .nav-link:hover {
-      background: none;
-    }
-  
-    #core {
-      margin-left: 4px;
-    }
-  
-    .main {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-    }
-  
-    #img {
-      margin-right: 2rem !important;
-    }
-  
-    #logo {
-      margin-left: 0 !important;
-    }
-  
-    .navbar-nav {
-      margin-left: 2rem !important;
-    }
-  
-    #btn {
-      margin-left: 2rem;
-      margin-top: 1rem;
-    }
-  
-    #h1text {
-      font-size: 3rem;
-    }
-    #underline {
-      margin-left: -12px;
-    }
-  
-    .loader {
-      margin-top: -7.5rem;
-    }
-  
-    .loading {
-      margin-top: -3rem;
-      margin-left: 12rem;
-    }
-    #mtext {
-      margin-left: 1rem;
-      padding-right: 1rem;
-    }
-  
-    #bulb {
-      margin-left: -10px !important ;
-      margin-top: 5px;
-    }
-  }
-  
-  @media screen and (max-width: 1024px) {
-    .profile-card {
-      margin-top: 3rem !important;
-    }
-  
-    #core {
-      margin-left: 4px;
-    }
-  
-    .main {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-    }
-  
-    #logo {
-      margin-left: 0;
-    }
-  
-    #img {
-      padding-right: 1.7rem !important;
-    }
-  
-    #text-pad {
-      padding-top: 4rem;
-    }
-  
-    #textpad {
-      line-height: 45px;
-    }
-  }
-  
