--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,23 @@ body {
   transition: all 0.25s ease-in-out;
 }
 
+.btn-second {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3rem;
+  width: 350px;
+  font-size: large;
+  color: #fffffe;
+  background-color: rgb(0, 204, 255, 0.9);
+  border: solid 2px rgb(0, 204, 255, 0.9);
+}
+.btn-second:hover {
+  color: #ffffff;
+  border: solid 2px rgba(0, 119, 255, 0.9) !important;
+  background-color: rgba(0, 119, 255, 0.9);
+}
+
 .hover-underline-animation:after {
   content: "";
   position: absolute;
@@ -209,7 +226,7 @@ body {
   width: 50% !important;
 }
 
-.pricing{
+.pricing {
   margin-top: 12rem;
 }
 
@@ -220,28 +237,39 @@ body {
     #041f3a 65%,
     rgba(121, 121, 121, 0.02)
   ) !important;
-  -webkit-background-clip: text !important; 
+  -webkit-background-clip: text !important;
   background-clip: text !important;
   font-size: 3rem;
 }
 
-
-.pricing-sub{
+.pricing-sub {
   width: 100%;
-  max-width:550px;
+  max-width: 550px;
   font-size: 1.2rem;
   margin-left: 22.5rem;
   margin-top: 20px;
   color: #2a668e;
 }
 
-.card-header-content h1{
+.card-header-content h1 {
   font-size: 1.5rem;
 }
 
-.card-group{
+.card-group {
   margin-top: 5rem;
   display: flex;
   justify-content: space-between;
   gap: 50px;
+}
+
+.header3 {
+  margin-top: 10rem;
+}
+
+.card-header3 {
+  height: 60vh;
+}
+
+.card-header3  div {
+  position:relative !important;
 }
