--- a/src/index.css
+++ b/src/index.css
@@ -390,7 +390,7 @@ body {
 
 .seo-img-col,
 .seo-img-col2 {
-  overflow: hidden; 
+  overflow: hidden;
   background-color: rgb(0, 0, 0);
   display: grid;
   place-items: center;
@@ -444,34 +444,56 @@ body {
   filter: invert(1);
 }
 
-.brand-text{
-  font-weight: 900;
+.brand-text {
+  /* font-weight: 100; */
   font-size: 3rem;
-  opacity: 0.84;
-  color: rgba(0, 0, 0, 0);
   -webkit-text-fill-color: transparent;
-  background-color: rgba(0, 0, 0, 0);
-  background-image: linear-gradient(171deg, #041f3a 54%, rgba(4, 31, 58, 0.68));
+  background-image: linear-gradient(
+    120deg,
+    #041f3a 65%,
+    rgba(121, 121, 121, 0.02)
+  );
   -webkit-background-clip: text;
   background-clip: text;
-
 }
 
-.slider-div{
+.slider-div {
   background-color: white;
   border-radius: 4px;
 }
 
-/* CSS for the expanding effect */
 .expanding-container {
-  overflow: hidden; /* To prevent horizontal scroll during animation */
+  overflow: hidden;
 }
 
 .expanding-image {
-  width: 100%; /* Initially the image will take full width of its container */
-  transition: width 0.5s ease; /* Smooth transition effect for width change */
+  width: 100%;
+  transition: width 0.5s ease;
 }
 
 .expanded {
-  width: 150%; /* When the image is expanded */
+  width: 150%;
+}
+
+.btn-fourth {
+  font-size: 1.2rem;
+  background-color: transparent;
+  color: black;
+  border: none;
+  border-radius: 5px !important;
+  filter: drop-shadow(0 0 0.45rem rgb(0, 114, 228));
+}
+
+.btn-fourth:hover {
+  background-color: transparent;
+  color: black;
+  border: none !important;
+}
+
+.design-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: -9999;
 }
